--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
+    "i": "^0.3.7",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.0.1",
+    "npm": "^9.3.1",
     "parser": "^0.1.4",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
